third_party/WebKit/Source/core/layout/LayoutFlexibleBox.cpp
@@ -1089,30 +1089,37 @@ MinMaxSize LayoutFlexibleBox::ComputeMinAndMaxSizesForChild(
     if (HasAspectRatio(child) && child.IntrinsicSize().Height() > 0)
       content_size =
           AdjustChildSizeForAspectRatioCrossAxisMinAndMax(child, content_size);
-    if (sizes.max_size != -1 && content_size > sizes.max_size)
-      content_size = sizes.max_size;
-
-    Length main_size = IsHorizontalFlow() ? child.StyleRef().Width()
-                                          : child.StyleRef().Height();
-    if (MainAxisLengthIsDefinite(child, main_size)) {
-      LayoutUnit resolved_main_size =
-          ComputeMainAxisExtentForChild(child, kMainOrPreferredSize, main_size);
-      DCHECK_GE(resolved_main_size, LayoutUnit());
-      LayoutUnit specified_size =
-          sizes.max_size != -1 ? std::min(resolved_main_size, sizes.max_size)
-                               : resolved_main_size;
-
-      sizes.min_size = std::min(specified_size, content_size);
-    } else if (UseChildAspectRatio(child)) {
-      Length cross_size_length = IsHorizontalFlow() ? child.StyleRef().Height()
-                                                    : child.StyleRef().Width();
-      LayoutUnit transferred_size =
-          ComputeMainSizeFromAspectRatioUsing(child, cross_size_length);
-      transferred_size = AdjustChildSizeForAspectRatioCrossAxisMinAndMax(
-          child, transferred_size);
-      sizes.min_size = std::min(transferred_size, content_size);
-    } else {
+    if (child.IsTable() && !IsColumnFlow()) {
+      // Avoid resolving minimum size to something narrower than the minimum
+      // preferred logical width of the table.
       sizes.min_size = content_size;
+    } else {
+      if (sizes.max_size != -1 && content_size > sizes.max_size)
+        content_size = sizes.max_size;
+
+      Length main_size = IsHorizontalFlow() ? child.StyleRef().Width()
+                                            : child.StyleRef().Height();
+      if (MainAxisLengthIsDefinite(child, main_size)) {
+        LayoutUnit resolved_main_size = ComputeMainAxisExtentForChild(
+            child, kMainOrPreferredSize, main_size);
+        DCHECK_GE(resolved_main_size, LayoutUnit());
+        LayoutUnit specified_size =
+            sizes.max_size != -1 ? std::min(resolved_main_size, sizes.max_size)
+                                 : resolved_main_size;
+
+        sizes.min_size = std::min(specified_size, content_size);
+      } else if (UseChildAspectRatio(child)) {
+        Length cross_size_length = IsHorizontalFlow()
+                                       ? child.StyleRef().Height()
+                                       : child.StyleRef().Width();
+        LayoutUnit transferred_size =
+            ComputeMainSizeFromAspectRatioUsing(child, cross_size_length);
+        transferred_size = AdjustChildSizeForAspectRatioCrossAxisMinAndMax(
+            child, transferred_size);
+        sizes.min_size = std::min(transferred_size, content_size);
+      } else {
+        sizes.min_size = content_size;
+      }
     }
   }
   DCHECK_GE(sizes.min_size, LayoutUnit());
